--- a/src/contents/home/home.scss
+++ b/src/contents/home/home.scss
@@ -152,6 +152,8 @@
       .services-content-item {
         padding: 15px;
         img {
+          height: 250px;
+          width: 400px;
           margin-bottom: 20px;
         }
         h3 {
@@ -236,6 +238,8 @@
     .tab-item {
         max-width: 800px;
       img {
+        width: 800px;
+        height: 550px;
         margin-bottom: 20px;
       }
       h3 {
